--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "build": "rspack build",
+    "build": "vite build",
     "check": "biome check --write",
-    "dev": "rspack dev",
+    "dev": "vite dev",
     "format": "biome format --write",
-    "preview": "rspack preview"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@kuma-ui/core": "^1.5.9",
@@ -30,14 +30,13 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@kuma-ui/webpack-plugin": "^1.4.3",
-    "@rspack/cli": "^1.3.5",
-    "@rspack/core": "^1.3.5",
-    "@rspack/plugin-react-refresh": "^1.2.0",
+    "@kuma-ui/vite": "^1.4.0",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
+    "@vitejs/plugin-react": "^4.4.0",
     "react-refresh": "^0.17.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vite": "^6.3.0"
   }
 }
