chore: updated the code format

--- a/biome.json
+++ b/biome.json
@@ -12,10 +12,12 @@
     "useIgnoreFile": true
   },
   "formatter": {
+    "enabled": true,
     "indentStyle": "space"
   },
   "javascript": {
     "formatter": {
+      "enabled": true,
       "quoteStyle": "single"
     }
   },
